--- a/PPSstyle.css
+++ b/PPSstyle.css
@@ -49,7 +49,6 @@ aside {
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
-    float: center;
     padding-top: 0.05%;
     padding-bottom: 0.05%;
     border-radius: 10px;
@@ -63,15 +62,14 @@ aside {
 }
 .tactic {
     background-color: rgb(27, 27, 27);
-    width: 59%;
-    margin-left: 1%;
+    width: 33%;
+    margin-left: 2%;
     margin-right: 1%;
     margin-bottom: 1.5%;
     color: white;
     display: inline-block;
-    padding-left: 3%;
+    padding-left: 2%;
     padding-right: 2%;
-    float: center;
     padding-top: 0.05%;
     padding-bottom: 0.05%;
     border-radius: 10px;
@@ -84,9 +82,15 @@ aside {
     width: 14%;
 }
 .tactic_name {
-    padding-top: 2px;
-    font-size: 23px;
+    padding-top: 0%;
+    font-size: 22px;
     display: inline-block;
+}
+.tactic_name_little {
+    padding-top: 1.3%;
+    font-size: 19px;
+    display: inline-block;
+    padding-bottom: 0.6%;
 }
 .about {
     height: 0;
@@ -97,12 +101,9 @@ aside {
     font-size: 80%;
     display: block;
     color: rgb(200, 200, 200);
-    margin-top: 24px;
+    margin-top: -16px;
     height: auto;
     margin-bottom: 10px; 
-}
-.tactic.shifted {
-    
 }
 .open {
     background: none;
@@ -110,10 +111,11 @@ aside {
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     float: right;
-    margin-top: 24px;
-    width: 23%;
+    margin-top: 20px;
+    width: 21%;
     height: 30px;
     cursor: pointer;
+    font-size: 80%;
 }
 .open:hover {
   background-color: #303030;
@@ -124,8 +126,70 @@ aside {
     opacity: 0;
     cursor: not-allowed;
 }
+@media (max-width: 1364px) {
+.tactic {
+    width: 32%;
+    margin-left: 2%;
+}
+.tactic_name_little {
+    font-size: 18px;
+    padding-bottom: 1.2%;
+}
+.open {
+    width: 18%;
+    font-size: 55%;
+    height: 25px;
+    margin-top: 18px;
+}
 
-@media (max-width: 750px) {
+}
+@media (max-width: 1222px) {
+.tactic {
+    width: 32%;
+    margin-left: 1.5%;
+}
+.tactic_name_little {
+    font-size: 17px;
+    padding-bottom: 1.2%;
+    padding-top: 2.5%;
+}
+
+}
+@media (min-width: 726px) and (max-width: 1180px) {
+.tactic {
+    width: 58%;
+    margin-left: 2%;
+    margin-right: 1%;
+    margin-bottom: 1.5%;
+    display: block;
+    padding-left: 3%;
+}
+.tactic_img {
+    padding-left: 0%;
+    padding-right: 2.5%;
+    padding-top: 0%;
+    padding-bottom: 3%;
+    width: 14%;
+}
+.open {
+    margin-top: 18px;
+}
+.about.expanded {
+    padding-top: 1px;
+    margin-top: 5px;
+}
+.tactic_name {
+    padding-top: 0.5%;
+    font-size: 18px;
+}
+.tactic_name_little {
+    padding-top: 0.5%;
+    font-size: 20px;
+    display: inline-block;
+}
+
+}
+@media (max-width: 725px) {
 
 .logo {
     width: 190px;
@@ -142,8 +206,6 @@ aside {
 }
 aside {
     width: 88%;
-    margin-left: 1%;
-    margin-right: 1%;
     margin-bottom: 3%;
     padding-left: 6%;
     padding-right: 3%;
@@ -156,29 +218,29 @@ aside {
 }
 .tactic {
     width: 88%;
-    margin-left: 1%;
-    margin-right: 1%;
     padding-left: 6%;
     padding-right: 3%;
-    padding-left: 6%;
-    padding-right: 3%;
+    padding-bottom: 0%;
 }
 .tactic_name {
     font-size: 17px;
     padding-top: 8px;
 }
+.tactic_name_little {
+    font-size: 13.5px;
+    padding-top: 8px;
+    padding-bottom: 4px;
+}
 .open {
-    width: 20%;
+    width: 23%;
     height: 27px;
-    font-size: 65%;
+    font-size: 30%;
+    margin-top: 6%;
+}
+.about.expanded {
+    font-size: 90%;
+    margin-top: -17px;
+    margin-bottom: 8px; 
 }
 
-}
-@media (max-width: 1000px) {
-    .open {
-        margin-top: 18px;
-    }
-    .about.expanded {
-        margin-top: 0px;
-    }
 }
